ci: add opencode for plugin integration tests
- Install opencode CLI in CI workflow
- Configure plugin and free model for tests
- Integration tests run in CI (opencode has free models)
- Update CONTRIBUTING.md with new naming conventions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,24 @@ jobs:
           sudo apt-get install -y jq
           sudo npm install -g @devcontainers/cli
 
+      - name: Install opencode
+        run: |
+          curl -fsSL https://opencode.ai/install | bash
+          echo "$HOME/.opencode/bin" >> $GITHUB_PATH
+
+      - name: Setup opencode plugin
+        run: |
+          mkdir -p ~/.config/opencode/plugins/ocdc/command
+          cp plugin/index.js plugin/helpers.js ~/.config/opencode/plugins/ocdc/
+          cp plugin/command/ocdc.md ~/.config/opencode/plugins/ocdc/command/
+          # Configure opencode with plugin and free model
+          mkdir -p ~/.config/opencode
+          cat > ~/.config/opencode/opencode.json << 'EOF'
+          {
+            "model": "opencode/gpt-5-nano",
+            "plugin": ["/home/runner/.config/opencode/plugins/ocdc"]
+          }
+          EOF
+
       - name: Run tests
         run: ./test/run_tests.bash
