docs: add poll config schema and PR reviews example
- Add JSON schema for poll configuration validation
- Add github-pr-reviews.yaml example showing /review command usage
- Update github-issues.yaml with schema reference and agent option
- Both examples demonstrate session.agent configuration

--- a/share/ocdc/examples/github-issues.yaml
+++ b/share/ocdc/examples/github-issues.yaml
@@ -1,3 +1,5 @@
+# yaml-language-server: $schema=../poll-config.schema.json
+#
 # GitHub Issues Poll Configuration
 #
 # Polls for issues with a specific label and creates devcontainer
@@ -44,3 +46,6 @@ prompt:
 
 session:
   name_template: "ocdc-{repo_short}-issue-{number}"
+  # Use 'build' agent for issue work (can write code)
+  # Default is 'plan' (read-only, safe for automated sessions)
+  agent: build
