feat(poll): refactor poll config schema with source_type defaults (#58)
* feat(poll): refactor poll config schema with source_type defaults (#16)

- Replace complex fetch_command + item_mapping + repo_paths with:
  - source_type (required): linear_issue, github_issue, github_pr
  - repo_filters (required): flexible rules for mapping items to repos
  - fetch (optional): key-value fetch options instead of shell commands
  - All other fields have smart defaults per source type

- Add smart defaults for each source type:
  - linear_issue: agent=build, fetch from Linear CLI
  - github_issue: agent=build, fetch from gh search issues
  - github_pr: agent=plan (read-only for reviews)

- Implement repo filter matching with specificity:
  - Most specific rule wins (team+labels > labels > team)
  - Case-insensitive matching on all criteria
  - Support team, labels, repo, org, project, milestone

- Update lib/ocdc-poll to use new poll_config_* functions
- Update examples to minimal new format
- Add comprehensive test coverage (41 config tests, 21 schema tests)

* test: require explicit opt-in for integration tests

Integration tests create persistent OpenCode sessions that pollute
the user's session history. Require OCDC_INTEGRATION_TESTS=1 to opt-in.

* refactor(poll): extract poll-config.bash into modular files

Split 830-line monolith into focused modules:
- ocdc-yaml.bash: YAML parsing utilities (_yaml_*)
- ocdc-poll-defaults.bash: Source type defaults (item mapping, prompts, agents)
- ocdc-poll-fetch.bash: Fetch command building with shell escaping
- ocdc-poll-filter.bash: Repo filter matching with specificity

Main ocdc-poll-config.bash now sources modules and provides:
- Schema/config validation
- Config access functions
- Listing and template rendering

No behavior changes - all 46 poll config tests pass.

* test: use temp HOME for integration tests instead of opt-in

Integration tests now use a temp HOME with symlinks to real config,
so test sessions are isolated and c

--- a/share/ocdc/examples/github-issues.yaml
+++ b/share/ocdc/examples/github-issues.yaml
@@ -2,50 +2,22 @@
 #
 # GitHub Issues Poll Configuration
 #
-# Polls for issues with a specific label and creates devcontainer
+# Polls for GitHub issues assigned to you and creates devcontainer
 # sessions with OpenCode to work on them.
-#
-# To start work on an issue, add the configured label to it.
 #
 # Prerequisites:
 # - gh CLI installed and authenticated
-# - Repos listed in repo_paths must exist locally
+#
+# All other settings (fetch options, item mapping, prompt, session) use
+# smart defaults based on source_type. Override only if needed.
 
 id: github-issues
-enabled: true
-
-# Source type for tracking (used by opencode plugin)
 source_type: github_issue
 
-# Command to fetch items - must output JSON array
-# Customize the repos and label to match your setup
-fetch_command: |
-  gh issue list --repo OWNER/REPO --label "ocdc:ready" --state open --json number,title,body,url | jq '[.[] | . + {repo: "OWNER/REPO", repo_short: "REPO"}]'
-
-# jq expressions to extract fields from each item
-item_mapping:
-  key: '"\(.repo)-issue-\(.number)"'
-  repo: '.repo'
-  repo_short: '.repo_short'
-  number: '.number'
-  title: '.title'
-  body: '.body'
-  url: '.url'
-  branch: '"issue-\(.number)"'
-
-# Map repos to local paths
-repo_paths:
-  "OWNER/REPO": "~/path/to/repo"
-
-prompt:
-  template: |
-    Work on issue #{number}: {title}
-    {url}
-
-    {body}
-
-session:
-  name_template: "ocdc-{repo_short}-issue-{number}"
-  # Use 'build' agent for issue work (can write code)
-  # Default is 'plan' (read-only, safe for automated sessions)
-  agent: build
+# Map GitHub repos/orgs/labels to local repositories
+# Most specific rule wins (repo+labels > labels > repo > org)
+repo_filters:
+  - repo: "owner/backend"
+    repo_path: "~/code/backend"
+  - repo: "owner/frontend"
+    repo_path: "~/code/frontend"
