--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ocdc",
-  "version": "3.4.2",
-  "description": "Concurrent branch development with devcontainers using clone-based isolation",
+  "name": "opencode-devcontainers",
+  "version": "0.1.0",
+  "description": "Run multiple devcontainer instances with auto-assigned ports for OpenCode",
   "type": "module",
   "main": "bin/ocdc",
   "bin": {
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/athal7/ocdc.git"
+    "url": "https://github.com/athal7/opencode-devcontainers.git"
   },
   "keywords": [
     "devcontainer",
     "docker",
     "development",
     "branches",
-    "concurrent"
+    "opencode"
   ],
   "author": "Andrew Thal <467872+athal7@users.noreply.github.com>",
   "license": "MIT",
@@ -26,7 +26,7 @@
   "scripts": {
     "test": "./test/run_tests.bash",
     "semantic-release": "semantic-release",
-    "postinstall": "echo 'OCDC installed successfully! Run \"ocdc --help\" to get started.'"
+    "postinstall": "echo 'opencode-devcontainers installed! Run \"ocdc --help\" to get started.'"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0"
