feat(#99): simplify to plugin-only architecture (remove CLI) (#100)
* feat(#99): add plugin/core/paths.js module

Port path constants and utilities from bash to JS:
- PATHS object with getters for env var support
- pathId() for workspace identification
- resolvePath() for symlink resolution
- ensureDirs() to create required directories

* feat(#99): add plugin/core/ports.js module

Port allocation with file-based locking:
- withLock() using mkdir for atomic locking
- allocatePort() with race condition protection
- releasePort() for cleanup
- isPortFree() using net.createServer

* feat(#99): add plugin/core/git.js module

Git operations using child_process (zero dependencies):
- isGitRepo(), getRepoRoot(), getCurrentBranch()
- getRemoteUrl(), clone(), checkout(), fetch()
- listIgnoredFiles() for copying secrets to clones

* feat(#99): add plugin/core/clones.js module

Clone management for branch-based development:
- createClone() with reference-based efficiency
- copyGitignored() to transfer secrets/config to clones
- listClones() and removeClone() for management
- Filters: skips large files, lock files, dependency dirs

* feat(#99): add plugin/core/config.js module

Configuration handling for devcontainers:
- readDevcontainerJson() from workspace
- detectInternalPort() from config
- generateOverrideConfig() with port mapping
- loadUserConfig() with defaults

* feat(#99): add plugin/core/devcontainer.js module

Devcontainer CLI wrapper and orchestration:
- up() orchestrates clone/port/config/start
- exec() runs commands in container
- down() releases port allocation
- list() shows all allocations
- isContainerRunning() checks container status

* feat(#99): add plugin/core/index.js public API exports

Exports all core functionality for external use:
- High-level: up, exec, down, list
- Clone management: createClone, listClones, etc.
- Port management: allocatePort, releasePort, etc.
- Configuration: generateOverrideConfig, loadUserConfig
- Git operations: clone, check

--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "opencode-devcontainers",
   "version": "4.0.1",
-  "description": "Run multiple devcontainer instances with auto-assigned ports for OpenCode",
+  "description": "OpenCode plugin for running devcontainers with auto-assigned ports",
   "type": "module",
-  "main": "bin/ocdc",
-  "bin": {
-    "ocdc": "./bin/ocdc"
-  },
+  "main": "plugin/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/athal7/opencode-devcontainers.git"
@@ -16,7 +13,8 @@
     "docker",
     "development",
     "branches",
-    "opencode"
+    "opencode",
+    "plugin"
   ],
   "author": "Andrew Thal <467872+athal7@users.noreply.github.com>",
   "license": "MIT",
@@ -24,12 +22,9 @@
     "node": ">=18"
   },
   "scripts": {
-    "test": "./test/run_tests.bash",
-    "semantic-release": "semantic-release",
-    "postinstall": "echo 'opencode-devcontainers installed! Run \"ocdc --help\" to get started.'"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0"
+    "test": "node --test test/unit/*.test.js",
+    "test:watch": "node --test --watch test/unit/*.test.js",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@semantic-release/exec": "^6.0.3",
