feat: add git worktree support and workspace cleanup
- Add /worktree command for lightweight branch isolation without devcontainers
- Add /workspaces command for listing and cleanup of stale workspaces
- Copy gitignored files (secrets) to worktrees automatically
- Update bash interception to set workdir for worktree sessions
- Add getWorktreesDir() helper for worktree workspace paths

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "opencode-devcontainers",
   "version": "0.2.0",
-  "description": "OpenCode plugin for running devcontainers with auto-assigned ports",
+  "description": "OpenCode plugin for isolated branch workspaces using devcontainers or git worktrees",
   "type": "module",
   "main": "plugin/index.js",
   "repository": {
@@ -14,6 +14,8 @@
   },
   "keywords": [
     "devcontainer",
+    "worktree",
+    "workspace",
     "docker",
     "development",
     "branches",
